--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,19 @@ subprojects {
 
     repositories {
         maven {
-            url "http://maven.aliyun.com/nexus/content/groups/public/"
+            url "https://oss.sonatype.org/service/local/"
         }
+//        maven {
+//            url "http://maven.aliyun.com/nexus/content/groups/public"
+//        }
+//        maven {
+//            url "http://maven.oschina.net/content/groups/public" //开源中国的maven镜像
+//        }
+//        maven {
+//            url 'https://plugins.gradle.org/m2/'
+//        }
 
-        maven {
-            url "http://maven.aliyun.com/nexus/content/groups/public/"
-        }
-
-//        jcenter()
+        jcenter()
     }
 
     dependencies {
@@ -26,13 +31,13 @@ subprojects {
         ext.jarTree += fileTree(dir: rootProjectLibs, include: '**/*.jar')
         compile jarTree
 
-        compile 'org.slf4j:slf4j-api:1.7.12'
-        compile 'ch.qos.logback:logback-core:1.1.3'
-        compile 'ch.qos.logback:logback-classic:1.1.3'
-        compile 'org.slf4j:jcl-over-slf4j:1.7.12'
+        compile 'org.slf4j:slf4j-api:1.7.12'//
+        compile 'ch.qos.logback:logback-core:1.1.3'//
+        compile 'ch.qos.logback:logback-classic:1.1.3'//
+        compile 'org.slf4j:jcl-over-slf4j:1.7.12'//
 
-        compile 'commons-fileupload:commons-fileupload:1.3.1'
-        compile 'commons-codec:commons-codec:1.10'
+        compile 'commons-fileupload:commons-fileupload:1.3.1'//
+        compile 'commons-codec:commons-codec:1.10'//
         compile 'commons-lang:commons-lang:2.6'
         compile 'org.apache.commons:commons-lang3:3.5'
         compile 'com.belerweb:pinyin4j:2.5.0'
@@ -87,18 +92,20 @@ subprojects {
     }
 }
 repositories {
+    maven {
+        url "https://oss.sonatype.org/service/local/"
+    }
+    
 //    maven {
-//        url "http://192.168.1.100:8091/nexus/content/groups/public"
+//        url "http://maven.oschina.net/content/groups/public" //开源中国的maven镜像
 //    }
 //    maven {
-//        url "http://192.168.1.100:8091/nexus/content/repositories/yunland"
+//        url "http://maven.aliyun.com/nexus/content/groups/public"
 //    }
-    maven {
-        url "http://maven.oschina.net/content/groups/public/" //开源中国的maven镜像
-    }
-    maven {
-        url "http://maven.aliyun.com/nexus/content/groups/public/"
-    }
+//    maven {
+//        url 'https://plugins.gradle.org/m2/'
+//    }
+
     jcenter()
 }
 
