--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,9 @@
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/it_share_platform
-#jdbc.username=root
-#jdbc.password=ROOT
-jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/it_share_platform
-jdbc.username=postgres
-jdbc.password=123
+jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/it_share_platform
+jdbc.username=root
+jdbc.password=ROOT
+#jdbc.driver=org.postgresql.Driver
+#jdbc.url=jdbc:postgresql://localhost:5432/it_share_platform
+#jdbc.username=postgres
+#jdbc.password=123
