--- a/web/build.gradle
+++ b/web/build.gradle
@@ -2,6 +2,9 @@ archivesBaseName = 'it_share_platform-web'
 version 'unspecified'
 
 repositories {
+    maven {
+        url "https://oss.sonatype.org/service/local/"
+    }
     mavenCentral()
 }
 
