--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,7 @@ subprojects {
         compile 'net.coobird:thumbnailator:0.4.8'
         compile group: 'org.apache.poi', name: 'poi', version: '3.14'
         compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.14'
+        compile 'mysql:mysql-connector-java:5.0.4'
 
 //    compile 'com.moyuer.bsf:moyuer_bsf:1.1.66'
 //    compile 'tech.yunland.cms:yun-cms-web:1.2.23'
