--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/it_share_platform
+#jdbc.url=jdbc:mysql://localhost:3306/it_share_platform
+jdbc.url=jdbc:mysql://localhost:3306/it?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=ROOT
 #jdbc.driver=org.postgresql.Driver
