增加公共访问控制器，接入短信发送api

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,2 +1,10 @@
 token.timeout=24*60*60
 upload.save.dir=g:/it_demo/doc
+
+# 阿里大于
+taobao.appKey = 23554880
+taobao.appSecret = c3ad75ff1e00b7d36830da0884ee16d7
+taobao.reqUrl = http://gw.api.taobao.com/router/rest
+taobao.smsFreeSignName = 文卡
+taobao.smsTemplateCode = SMS_32750063
+taobao.smsType = normal
