--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ subprojects {
         ext.jarTree += fileTree(dir: rootProjectLibs, include: '**/*.jar')
         compile jarTree
 
+        compile fileTree(dir:'libs',include:['*.jar'])
+
         compile 'org.slf4j:slf4j-api:1.7.12'//
         compile 'ch.qos.logback:logback-core:1.1.3'//
         compile 'ch.qos.logback:logback-classic:1.1.3'//
