1.发表文章增加积分，2.增加问题回答采纳接口

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -10,8 +10,10 @@ jdbc.password=ROOT
 #jdbc.username=postgres
 #jdbc.password=123
 
-######################################
+# 记住密码时间配置
 token.timeout=600
+
+# 上传地址配置
 upload.save.dir=g:/it_demo/doc
 
 # 淘宝阿里大于
@@ -28,3 +30,7 @@ mail.port=587
 mail.username=1149412873
 mail.password=mxdnvexoolcvihcc
 mail.sendder=1149412873@qq.com
+
+# 积分配置
+limitContextLength=500
+integral.rate=1
