--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,7 @@ subprojects {
         compile group: 'org.apache.poi', name: 'poi', version: '3.14'
         compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.14'
         compile 'mysql:mysql-connector-java:5.0.4'
+        compile 'javax.mail:mail:1.4.7'
 
 //    compile 'com.moyuer.bsf:moyuer_bsf:1.1.66'
 //    compile 'tech.yunland.cms:yun-cms-web:1.2.23'
